tout est reglé pour l'affichage